--- a/.gitignore
+++ b/.gitignore
@@ -2,11 +2,14 @@
 .libs
 .idea
 .kdev4
+build
 *.kdev4
 
 # http://www.gnu.org/software/automake
 
 Makefile.in
+Makefile.global
+Makefile.fragments
 
 # http://www.gnu.org/software/autoconf
 
@@ -14,14 +17,22 @@ Makefile.in
 /autoscan.log
 /autoscan-*.log
 /aclocal.m4
+/acinclude.m4
 /compile
 /config.h.in
+/config.guess
+/config.sub
 /configure
+/configure.in
 /configure.scan
 /depcomp
 /install-sh
 /missing
 /stamp-h1
+
+/ltmain.sh
+/mkinstalldirs
+/run-tests.php
 
 # Object files
 *.o
